--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -21,17 +21,22 @@ jobs:
 
       - name: Install and Build
         uses: actions/setup-node@v2
-      - run: npm install
-      - run: npm run build
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Next.js Build and Export
+        run: |
+          npm run build
+          npm run export
+          touch out/.nojekyll
         env:
           CI: true
-      - run: npm run export
-      - run: touch out/.nojekyll
 
       - name: Push ./out to gh-pages branch
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-          git add out/
+          git add -f out/
           git commit -m "Deploy Next.js to gh-pages"
           git subtree push --prefix out origin gh-pages
