--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -39,4 +39,4 @@ jobs:
           git config user.email "<>"
           git add -f out/
           git commit -m "Deploy Next.js to gh-pages"
-          git subtree push --force --prefix out origin gh-pages
+          git subtree push --prefix out origin gh-pages
